[package]
name = "osc-test"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.4.0"
anyhow = "1.0.34"
thiserror = "1.0.22"
tokio = { version = "0.3.3", features = ["full"] }
log = "0.4.11"
env_logger = "0.8.1"
